// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GlobalCampaignListPage renders for non-siteadmin and totalCount: 0 1`] = `
<Fragment>
  <div
    className="d-flex justify-content-between align-items-end mb-3"
  >
    <div>
      <h1
        className="mb-2"
      >
        Campaigns
         
        <sup>
          <span
            className="badge badge-info"
          >
            Beta
          </span>
        </sup>
      </h1>
      <p
        className="mb-0"
      >
        Perform and track large-scale code changes.
         
        <a
          href="https://docs.sourcegraph.com/user/campaigns"
        >
          Learn how.
        </a>
      </p>
    </div>
  </div>
  <div
    className="card mt-4 mb-4"
  >
    <div
      className="card-body p-3"
    >
      <h3>
        Welcome to campaigns 
        <span
          className="badge badge-info"
        >
          Beta
        </span>
        !
      </h3>
      <p
        className="mb-1"
      >
        We're excited for you to use campaigns to remove legacy code, fix critical security issues, pay down tech debt, and more. We look forward to hearing about campaigns you run inside your organization. Take a look at some
         
        <a
          href="https://docs.sourcegraph.com/user/campaigns/examples"
        >
          examples in our documentation
        </a>
        , and 
        <a
          href="mailto:feedback@sourcegraph.com?subject=Campaigns feedback"
        >
          get in touch
        </a>
         with any questions or feedback!
      </p>
    </div>
  </div>
  <FilteredConnection
    authenticatedUser={
      Object {
        "siteAdmin": false,
      }
    }
    className="mb-3"
    defaultFirst={20}
    filters={
      Array [
        Object {
          "args": Object {},
          "id": "all",
          "label": "All",
          "tooltip": "Show all campaigns",
        },
        Object {
          "args": Object {
            "state": "OPEN",
          },
          "id": "open",
          "label": "Open",
          "tooltip": "Show only campaigns that are open",
        },
        Object {
          "args": Object {
            "state": "CLOSED",
          },
          "id": "closed",
          "label": "Closed",
          "tooltip": "Show only campaigns that are closed",
        },
      ]
    }
    hideSearch={true}
    history="[History]"
    location="[Location path=/]"
    nodeComponent={[Function]}
    nodeComponentProps={
      Object {
        "history": "[History]",
      }
    }
    noun="campaign"
    pluralNoun="campaigns"
    queryConnection={[Function]}
    telemetryService={
      Object {
        "log": [Function],
        "logViewEvent": [Function],
      }
    }
    useURLQuery={true}
  />
</Fragment>
`;

exports[`GlobalCampaignListPage renders for non-siteadmin and totalCount: 1 1`] = `
<Fragment>
  <div
    className="d-flex justify-content-between align-items-end mb-3"
  >
    <div>
      <h1
        className="mb-2"
      >
        Campaigns
         
        <sup>
          <span
            className="badge badge-info"
          >
            Beta
          </span>
        </sup>
      </h1>
      <p
        className="mb-0"
      >
        Perform and track large-scale code changes.
         
        <a
          href="https://docs.sourcegraph.com/user/campaigns"
        >
          Learn how.
        </a>
      </p>
    </div>
  </div>
  <div
    className="card mt-4 mb-4"
  >
    <div
      className="card-body p-3"
    >
      <h3>
        Welcome to campaigns 
        <span
          className="badge badge-info"
        >
          Beta
        </span>
        !
      </h3>
      <p
        className="mb-1"
      >
        We're excited for you to use campaigns to remove legacy code, fix critical security issues, pay down tech debt, and more. We look forward to hearing about campaigns you run inside your organization. Take a look at some
         
        <a
          href="https://docs.sourcegraph.com/user/campaigns/examples"
        >
          examples in our documentation
        </a>
        , and 
        <a
          href="mailto:feedback@sourcegraph.com?subject=Campaigns feedback"
        >
          get in touch
        </a>
         with any questions or feedback!
      </p>
    </div>
  </div>
  <FilteredConnection
    authenticatedUser={
      Object {
        "siteAdmin": false,
      }
    }
    className="mb-3"
    defaultFirst={20}
    filters={
      Array [
        Object {
          "args": Object {},
          "id": "all",
          "label": "All",
          "tooltip": "Show all campaigns",
        },
        Object {
          "args": Object {
            "state": "OPEN",
          },
          "id": "open",
          "label": "Open",
          "tooltip": "Show only campaigns that are open",
        },
        Object {
          "args": Object {
            "state": "CLOSED",
          },
          "id": "closed",
          "label": "Closed",
          "tooltip": "Show only campaigns that are closed",
        },
      ]
    }
    hideSearch={true}
    history="[History]"
    location="[Location path=/]"
    nodeComponent={[Function]}
    nodeComponentProps={
      Object {
        "history": "[History]",
      }
    }
    noun="campaign"
    pluralNoun="campaigns"
    queryConnection={[Function]}
    telemetryService={
      Object {
        "log": [Function],
        "logViewEvent": [Function],
      }
    }
    useURLQuery={true}
  />
</Fragment>
`;

exports[`GlobalCampaignListPage renders for siteadmin and totalCount: 0 1`] = `
<Fragment>
  <div
    className="d-flex justify-content-between align-items-end mb-3"
  >
    <div>
      <h1
        className="mb-2"
      >
        Campaigns
         
        <sup>
          <span
            className="badge badge-info"
          >
            Beta
          </span>
        </sup>
      </h1>
      <p
        className="mb-0"
      >
        Perform and track large-scale code changes.
         
        <a
          href="https://docs.sourcegraph.com/user/campaigns"
        >
          Learn how.
        </a>
      </p>
    </div>
  </div>
  <div
    className="card mt-4 mb-4"
  >
    <div
      className="card-body p-3"
    >
      <h3>
        Welcome to campaigns 
        <span
          className="badge badge-info"
        >
          Beta
        </span>
        !
      </h3>
      <p
        className="mb-1"
      >
        We're excited for you to use campaigns to remove legacy code, fix critical security issues, pay down tech debt, and more. We look forward to hearing about campaigns you run inside your organization. Take a look at some
         
        <a
          href="https://docs.sourcegraph.com/user/campaigns/examples"
        >
          examples in our documentation
        </a>
        , and 
        <a
          href="mailto:feedback@sourcegraph.com?subject=Campaigns feedback"
        >
          get in touch
        </a>
         with any questions or feedback!
      </p>
    </div>
  </div>
  <FilteredConnection
    authenticatedUser={
      Object {
        "siteAdmin": true,
      }
    }
    className="mb-3"
    defaultFirst={20}
    filters={
      Array [
        Object {
          "args": Object {},
          "id": "all",
          "label": "All",
          "tooltip": "Show all campaigns",
        },
        Object {
          "args": Object {
            "state": "OPEN",
          },
          "id": "open",
          "label": "Open",
          "tooltip": "Show only campaigns that are open",
        },
        Object {
          "args": Object {
            "state": "CLOSED",
          },
          "id": "closed",
          "label": "Closed",
          "tooltip": "Show only campaigns that are closed",
        },
      ]
    }
    hideSearch={true}
    history="[History]"
    location="[Location path=/]"
    nodeComponent={[Function]}
    nodeComponentProps={
      Object {
        "history": "[History]",
      }
    }
    noun="campaign"
    pluralNoun="campaigns"
    queryConnection={[Function]}
    telemetryService={
      Object {
        "log": [Function],
        "logViewEvent": [Function],
      }
    }
    useURLQuery={true}
  />
</Fragment>
`;

exports[`GlobalCampaignListPage renders for siteadmin and totalCount: 1 1`] = `
<Fragment>
  <div
    className="d-flex justify-content-between align-items-end mb-3"
  >
    <div>
      <h1
        className="mb-2"
      >
        Campaigns
         
        <sup>
          <span
            className="badge badge-info"
          >
            Beta
          </span>
        </sup>
      </h1>
      <p
        className="mb-0"
      >
        Perform and track large-scale code changes.
         
        <a
          href="https://docs.sourcegraph.com/user/campaigns"
        >
          Learn how.
        </a>
      </p>
    </div>
  </div>
  <div
    className="card mt-4 mb-4"
  >
    <div
      className="card-body p-3"
    >
      <h3>
        Welcome to campaigns 
        <span
          className="badge badge-info"
        >
          Beta
        </span>
        !
      </h3>
      <p
        className="mb-1"
      >
        We're excited for you to use campaigns to remove legacy code, fix critical security issues, pay down tech debt, and more. We look forward to hearing about campaigns you run inside your organization. Take a look at some
         
        <a
          href="https://docs.sourcegraph.com/user/campaigns/examples"
        >
          examples in our documentation
        </a>
        , and 
        <a
          href="mailto:feedback@sourcegraph.com?subject=Campaigns feedback"
        >
          get in touch
        </a>
         with any questions or feedback!
      </p>
    </div>
  </div>
  <FilteredConnection
    authenticatedUser={
      Object {
        "siteAdmin": true,
      }
    }
    className="mb-3"
    defaultFirst={20}
    filters={
      Array [
        Object {
          "args": Object {},
          "id": "all",
          "label": "All",
          "tooltip": "Show all campaigns",
        },
        Object {
          "args": Object {
            "state": "OPEN",
          },
          "id": "open",
          "label": "Open",
          "tooltip": "Show only campaigns that are open",
        },
        Object {
          "args": Object {
            "state": "CLOSED",
          },
          "id": "closed",
          "label": "Closed",
          "tooltip": "Show only campaigns that are closed",
        },
      ]
    }
    hideSearch={true}
    history="[History]"
    location="[Location path=/]"
    nodeComponent={[Function]}
    nodeComponentProps={
      Object {
        "history": "[History]",
      }
    }
    noun="campaign"
    pluralNoun="campaigns"
    queryConnection={[Function]}
    telemetryService={
      Object {
        "log": [Function],
        "logViewEvent": [Function],
      }
    }
    useURLQuery={true}
  />
</Fragment>
`;
